apps/llama-cpp/the-intersect/external-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-external-httproute
  namespace: llama-cpp
spec:
  parentRefs:
    - name: external-gateway-https
      namespace: cilium-ingress
  hostnames: ["${SUB_OPEN_ABLE}.${DOMAIN_CORONET_SUMMIT}"]
  rules:
    - backendRefs:
        - name: llama-cpp
          port: 80
